// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumb filter React.Fragment 1`] = `
<nav
  class="ant-breadcrumb"
>
  <ol>
    <li>
      <span
        class="ant-breadcrumb-link"
      >
        Location
      </span>
    </li>
    <span
      class="ant-breadcrumb-separator"
    >
      :
    </span>
    <li>
      <a
        class="ant-breadcrumb-link"
        href=""
      >
        Application Center
      </a>
    </li>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </ol>
</nav>
`;

exports[`Breadcrumb rtl render component should be rendered correctly in RTL direction 1`] = `
<nav
  class="ant-breadcrumb ant-breadcrumb-rtl"
>
  <ol />
</nav>
`;

exports[`Breadcrumb should accept undefined routes 1`] = `
<nav
  class="ant-breadcrumb"
>
  <ol />
</nav>
`;

exports[`Breadcrumb should allow Breadcrumb.Item is null or undefined 1`] = `
<nav
  class="ant-breadcrumb"
>
  <ol>
    <li>
      <span
        class="ant-breadcrumb-link"
      >
        Home
      </span>
      <span
        class="ant-breadcrumb-separator"
      >
        /
      </span>
    </li>
  </ol>
</nav>
`;

exports[`Breadcrumb should not display Breadcrumb Item when its children is falsy 1`] = `
<nav
  class="ant-breadcrumb"
>
  <ol>
    <li>
      <span
        class="ant-breadcrumb-link"
      >
        xxx
      </span>
      <span
        class="ant-breadcrumb-separator"
      >
        /
      </span>
    </li>
    <li>
      <span
        class="ant-breadcrumb-link"
      >
        yyy
      </span>
      <span
        class="ant-breadcrumb-separator"
      >
        /
      </span>
    </li>
  </ol>
</nav>
`;

exports[`Breadcrumb should render a menu 1`] = `
<nav
  class="ant-breadcrumb"
>
  <ol>
    <li>
      <span
        class="ant-breadcrumb-link"
      >
        <a
          href="#/index"
        >
          home
        </a>
      </span>
      <span
        class="ant-breadcrumb-separator"
      >
        /
      </span>
    </li>
    <li>
      <span
        class="ant-dropdown-trigger ant-breadcrumb-overlay-link"
      >
        <span
          class="ant-breadcrumb-link"
        >
          <a
            href="#/index/first"
          >
            first
          </a>
        </span>
        <span
          aria-label="down"
          class="anticon anticon-down"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="down"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
            />
          </svg>
        </span>
      </span>
      <span
        class="ant-breadcrumb-separator"
      >
        /
      </span>
    </li>
    <li>
      <span
        class="ant-breadcrumb-link"
      >
        <a
          href="#/index/first/second"
        >
          second
        </a>
      </span>
      <span
        class="ant-breadcrumb-separator"
      >
        /
      </span>
    </li>
    <li>
      <span
        class="ant-breadcrumb-link"
      >
        <span />
      </span>
      <span
        class="ant-breadcrumb-separator"
      >
        /
      </span>
    </li>
  </ol>
</nav>
`;

exports[`Breadcrumb should support Breadcrumb.Item default separator 1`] = `
<nav
  class="ant-breadcrumb"
>
  <ol>
    <li>
      <span
        class="ant-breadcrumb-link"
      >
        Location
      </span>
      <span
        class="ant-breadcrumb-separator"
      >
        /
      </span>
    </li>
    <span>
      <li>
        <span
          class="ant-breadcrumb-link"
        >
          Mock Node
        </span>
        <span
          class="ant-breadcrumb-separator"
        >
          /
        </span>
      </li>
    </span>
    <li>
      <span
        class="ant-breadcrumb-link"
      >
        Application Center
      </span>
      <span
        class="ant-breadcrumb-separator"
      >
        /
      </span>
    </li>
  </ol>
</nav>
`;

exports[`Breadcrumb should support React.Fragment and falsy children 1`] = `
<nav
  class="ant-breadcrumb"
>
  <ol>
    <li>
      <span
        class="ant-breadcrumb-link"
      >
        yyy
      </span>
      <span
        class="ant-breadcrumb-separator"
      >
        /
      </span>
    </li>
    <li>
      <span
        class="ant-breadcrumb-link"
      >
        yyy
      </span>
      <span
        class="ant-breadcrumb-separator"
      >
        /
      </span>
    </li>
    <li>
      <span
        class="ant-breadcrumb-link"
      >
        yyy
      </span>
      <span
        class="ant-breadcrumb-separator"
      >
        /
      </span>
    </li>
    0
  </ol>
</nav>
`;

exports[`Breadcrumb should support custom attribute 1`] = `
<nav
  class="ant-breadcrumb"
  data-custom="custom"
>
  <ol>
    <li>
      <span
        class="ant-breadcrumb-link"
        data-custom="custom-item"
      >
        xxx
      </span>
      <span
        class="ant-breadcrumb-separator"
      >
        /
      </span>
    </li>
    <li>
      <span
        class="ant-breadcrumb-link"
      >
        yyy
      </span>
      <span
        class="ant-breadcrumb-separator"
      >
        /
      </span>
    </li>
  </ol>
</nav>
`;
